--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
-ibm.mq.queueManager=QM1
-ibm.mq.channel=DEV.ADMIN.SVRCONN
-ibm.mq.connName=localhost(1414)
+ibm.mq.queueManager=DEMO_GKE
+ibm.mq.channel=DEV.APP.SVRCONN
+ibm.mq.connName=server-mqgke-2244154f.nip.io(51414)
 ibm.mq.user=admin
-ibm.mq.password=passw0rd
+ibm.mq.password=db2app#ICP
