--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ibm.mq.queueManager=DEMO_GKE
-ibm.mq.channel=DEV.APP.SVRCONN
+ibm.mq.channel=DEV.ADMIN.SVRCONN
 ibm.mq.connName=server-mqgke-2244154f.nip.io(51414)
 ibm.mq.user=admin
-ibm.mq.password=db2app#ICP
+ibm.mq.password=db2adm#ICP
