--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-ibm.mq.queueManager=DEMO_GKE
+ibm.mq.queueManager=DEMO_ONPREM
 ibm.mq.channel=DEV.ADMIN.SVRCONN
-ibm.mq.connName=server-mqgke-2244154f.nip.io(51414)
+ibm.mq.connName=server-mqonprem-95519ff1.nip.io(51414)
 ibm.mq.user=admin
 ibm.mq.password=db2adm#ICP
